Fixed headings on mobile devices (again)

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ header {
   }
 
   h2 {
-    font-size: 230%;
+    font-size: 220%;
   }
 }
 
